tests/transpiler/x/java/fun_call.error
exit status 1
Main.java:7: error: bad operand types for binary operator '=='
        System.out.println((add(2, 3) == null ? "nil" : add(2, 3)));
                                      ^
  first type:  int
  second type: <null>
1 error
