tests/transpiler/x/java/fun_call.java
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 18:28:09 UTC
public class Main {
    static int add(int a, int b) {
        return a + b;
    }
    public static void main(String[] args) {
        System.out.println((add(2, 3) == null ? "nil" : add(2, 3)));
    }
}
